renamed assets for ease; added assets to projects.html

--- a/projects.html
+++ b/projects.html
@@ -3,5 +3,9 @@
 </head>
 <body>
     <h1>Projects</h1>
+    <h3>Audio Narrative</h3>
+    <p><a href="audionarrative.mp3">Horror & Desire</a></p>
+    <h3>Video Essay</h3>
+    <p><a href="https://youtu.be/oH6pt7FIFwM">Fantastic Mr. Fox & Contentment</a></p>
     <h2><a href="index.html">Main Page</a></h2>
 </body>
