added images to index

--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 </head>
 <body>
     <h1>Katelynn's Portfolio</h1>
+    <img src="assets/nosferatu.jpeg" alt="Lily Rose-Depp as Ellen in Robert Egger's Nosferatu. 
+                                        A shadow of Nosferatu's hand goes over her face as she looks in horror.">
+    <img src="assets/fmf.jpg" alt="The characters (from left to right) Kristofferson, Kylie, Mr. Fox, Mrs. Fox, and Ash from 
+                                Wes Anderson's Fantastic Mr. Fox. They are all in pajamas underground. Mr. Fox holds a lamp.">
     <h2><a href="projects.html">Projects</a></h2>
 </body>
