--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,65 @@
 </head>
 <body>
     <h1>Projects</h1>
-    <h3>Audio Narrative</h3>
+
+    <h2>Audio Narrative</h2>
     <p><a href="audionarrative.mp3">Horror & Desire</a></p>
-    <h3>Video Essay</h3>
+
+    <h4>Summary</h4>
+    <p>This project will delve into the history of how female desire and sexuality have been explored and intertwined 
+        throughout horror films. By looking at various films from different eras both in society at large and within 
+        horror as a genre, a clear picture of the two’s relationship will be painted. In addition, a deeper look into 
+        how this relationship has evolved from the early days of horror to now will be dissected and used to analyze 
+        societal changes.</p>
+
+    <h4>Credits</h4>
+    <p><a href="https://www.youtube.com/watch?v=nulvWqYUM8k">Nosferatu by Robert Eggers</a></p>
+    <p><a href="https://www.youtube.com/watch?v=TUamUHcxMVY">The Phantom of the Opera by Rupert Julian</a></p>
+    <p><a href="https://www.youtube.com/watch?v=mvLpbHKV1_8">Scream by Wes Craven</a></p>
+    <p><a href="https://www.youtube.com/watch?v=gVJmqp6ufnk">Come to Me by Howard Shore</a></p>
+
+
+    <h2>Video Essay</h2>
     <p><a href="https://youtu.be/oH6pt7FIFwM">Fantastic Mr. Fox & Contentment</a></p>
+    
+    <h4>Summary</h4>
+    <p>This project is about the 2009 film *Fantastic Mr. Fox* and its ideas on contentment. The film depicts ambition 
+        as an adversary to contentment, leading the titular fox to fall back on the exciting jobs of his youth instead 
+        of focusing on the stability of his current life. How does contentment lead to boredom and restfulness, and how 
+        is one meant to cope? Is it better to continue with the familiar hand you’re dealt, or risk it all on something 
+        exciting?</p>
+    <p>I didn’t grow up with this movie, having only seen it for the first time roughly two years ago. Yet it’s so 
+        immediately touching and real, it almost gives you goosebumps. *Fantastic Mr. Fox* is one of the most human 
+        narratives I’ve ever watched onscreen, and I wished to talk about an aspect of why that is that I felt was neglected.
+        Most other essays on the movie talk about the familial dynamics or being “different,” while I felt what it says 
+        about the struggle of ambition vs contentment and what it brings was far more interesting. </p>
+    <p>Using clips from a movie to elucidate my point is endlessly helpful. There’s so much that only words or even just 
+        audio can miss. Visuals helped much more than I would’ve originally thought, whether when used as simply part of an 
+        audio clip itself or when providing context to what I’m saying. This applies to stock footage as well, which I 
+        frankly doubted the effectiveness of. However, that footage greatly helped strengthen points that otherwise would have 
+        lacked such a visual. A similar thought process was had with the usage of text, which I originally thought would have 
+        been more distracting than anything. In reality, it helps emphasize points in ways my voice alone couldn’t.</p>
+    <p>Originally, I wasn’t going to include any personal anecdotes. I felt that it would distract more than it could add 
+        anything. While working on the essay, however, I quickly realized this wasn’t the case. Using the anecdote about my 
+        dad helped flesh out my points and ground it in reality. It made the ideas of contentment and what it could bring I 
+        discuss feel more important.</p>
+
+    <h4>Credits</h4>
+    <p><a href="https://www.youtube.com/watch?v=B-J95eYpYZM">Fantastic Mr. Fox, Wes Anderson - licensed under fair use</a></p>
+    <p><a href="https://www.youtube.com/watch?v=15SS1lL9ogY">FANTASTIC MR. FOX Featurette - George Clooney as Mr. Fox, 
+                                                    SearchlightPictures - licensed under fair use</a></p>
+    <p><a href="https://collider.com/wes-anderson-interview-fantastic-mr-fox/">Wes Anderson Interview FANTASTIC MR. FOX, 
+                                                    Steven Weintraub, Collider</a></p>
+    <p><a href="https://www.npr.org/transcripts/120682083">Wes Anderson Covers New Ground With 'Mr. Fox', Terry Gross, NPR</a></p>
+    <p><a href="https://www.youtube.com/watch?v=unpIyUXuH8A">Roald Dahl | Fantastic Mr Fox - Full Live Read Audiobook, 
+                                                    Book Club</a></p>
+    <p><a href="https://archive.org/details/roald-dah-l-fantastic-mr.-fox-pdf/page/n5/mode/2up">Fantastic Mr. Fox, Roald Dahl - 
+                                                    licensed under fair use</a></p>
+    <p><a href="https://jp.pinterest.com/pin/294282156884660156/">Quentin Blake Illustration</a></p>
+    <p><a href="https://www.manchestereveningnews.co.uk/whats-on/whats-on-news/original-puppets-netflix-hollywood-movies-25615585">
+        Original puppets from Netflix and Hollywood movies on display in Trafford</a></p>
+    <p><a href="https://www.youtube.com/watch?v=ojCLrvhjhK0">Free stock footage - Boat on the ocean, Top Copyright-Free</a></p>
+    <p>Personal photos and video, Alexander Vega</p>
+
     <h2><a href="index.html">Main Page</a></h2>
 </body>
