created + linked styles sheet; fixed credits

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <h1>Projects</h1>
 
     <h2>Audio Narrative</h2>
-    <p><a href="audionarrative.mp3">Horror & Desire</a></p>
+    <p><audio controls src="assets\audionarrative.mp3"></audio></p>
 
     <h4>Summary</h4>
     <p>This project will delve into the history of how female desire and sexuality have been explored and intertwined 
@@ -16,11 +16,12 @@
         societal changes.</p>
 
     <h4>Credits</h4>
-    <p><a href="https://www.youtube.com/watch?v=nulvWqYUM8k">Nosferatu by Robert Eggers</a></p>
-    <p><a href="https://www.youtube.com/watch?v=TUamUHcxMVY">The Phantom of the Opera by Rupert Julian</a></p>
-    <p><a href="https://www.youtube.com/watch?v=mvLpbHKV1_8">Scream by Wes Craven</a></p>
-    <p><a href="https://www.youtube.com/watch?v=gVJmqp6ufnk">Come to Me by Howard Shore</a></p>
-
+    <ul>
+    <li><a href="https://www.youtube.com/watch?v=nulvWqYUM8k">Nosferatu by Robert Eggers</a></li>
+    <li><a href="https://www.youtube.com/watch?v=TUamUHcxMVY">The Phantom of the Opera by Rupert Julian</a></li>
+    <li><a href="https://www.youtube.com/watch?v=mvLpbHKV1_8">Scream by Wes Craven</a></li>
+    <li><a href="https://www.youtube.com/watch?v=gVJmqp6ufnk">Come to Me by Howard Shore</a></li>
+    </ul>
 
     <h2>Video Essay</h2>
     <p><a href="https://youtu.be/oH6pt7FIFwM">Fantastic Mr. Fox & Contentment</a></p>
@@ -48,21 +49,22 @@
         discuss feel more important.</p>
 
     <h4>Credits</h4>
-    <p><a href="https://www.youtube.com/watch?v=B-J95eYpYZM">Fantastic Mr. Fox, Wes Anderson - licensed under fair use</a></p>
-    <p><a href="https://www.youtube.com/watch?v=15SS1lL9ogY">FANTASTIC MR. FOX Featurette - George Clooney as Mr. Fox, 
-                                                    SearchlightPictures - licensed under fair use</a></p>
-    <p><a href="https://collider.com/wes-anderson-interview-fantastic-mr-fox/">Wes Anderson Interview FANTASTIC MR. FOX, 
-                                                    Steven Weintraub, Collider</a></p>
-    <p><a href="https://www.npr.org/transcripts/120682083">Wes Anderson Covers New Ground With 'Mr. Fox', Terry Gross, NPR</a></p>
-    <p><a href="https://www.youtube.com/watch?v=unpIyUXuH8A">Roald Dahl | Fantastic Mr Fox - Full Live Read Audiobook, 
-                                                    Book Club</a></p>
-    <p><a href="https://archive.org/details/roald-dah-l-fantastic-mr.-fox-pdf/page/n5/mode/2up">Fantastic Mr. Fox, Roald Dahl - 
-                                                    licensed under fair use</a></p>
-    <p><a href="https://jp.pinterest.com/pin/294282156884660156/">Quentin Blake Illustration</a></p>
-    <p><a href="https://www.manchestereveningnews.co.uk/whats-on/whats-on-news/original-puppets-netflix-hollywood-movies-25615585">
-        Original puppets from Netflix and Hollywood movies on display in Trafford</a></p>
-    <p><a href="https://www.youtube.com/watch?v=ojCLrvhjhK0">Free stock footage - Boat on the ocean, Top Copyright-Free</a></p>
-    <p>Personal photos and video, Alexander Vega</p>
-
+    <ul>
+    <li><a href="https://www.youtube.com/watch?v=B-J95eYpYZM">Fantastic Mr. Fox, Wes Anderson - licensed under fair use</a></li>
+    <li><a href="https://www.youtube.com/watch?v=15SS1lL9ogY">FANTASTIC MR. FOX Featurette - George Clooney as Mr. Fox, 
+                                                    SearchlightPictures - licensed under fair use</a></li>
+    <li><a href="https://collider.com/wes-anderson-interview-fantastic-mr-fox/">Wes Anderson Interview FANTASTIC MR. FOX, 
+                                                    Steven Weintraub, Collider</a></li>
+    <li><a href="https://www.npr.org/transcripts/120682083">Wes Anderson Covers New Ground With 'Mr. Fox', Terry Gross, NPR</a></li>
+    <li><a href="https://www.youtube.com/watch?v=unpIyUXuH8A">Roald Dahl | Fantastic Mr Fox - Full Live Read Audiobook, 
+                                                    Book Club</a></li>
+    <li><a href="https://archive.org/details/roald-dah-l-fantastic-mr.-fox-pdf/page/n5/mode/2up">Fantastic Mr. Fox, Roald Dahl - 
+                                                    licensed under fair use</a></li>
+    <li><a href="https://jp.pinterest.com/pin/294282156884660156/">Quentin Blake Illustration</a></li>
+    <li><a href="https://www.manchestereveningnews.co.uk/whats-on/whats-on-news/original-puppets-netflix-hollywood-movies-25615585">
+        Original puppets from Netflix and Hollywood movies on display in Trafford</a></li>
+    <li><a href="https://www.youtube.com/watch?v=ojCLrvhjhK0">Free stock footage - Boat on the ocean, Top Copyright-Free</a></li>
+    <li>Personal photos and video, Alexander Vega</li>
+    </ul>
     <h2><a href="index.html">Main Page</a></h2>
 </body>
