added navigation bar
linked style sheet to projects and tweaked some color choices as well

--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,15 @@
 <head>
     <title>Portfolio Website || Projects</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    
+    <ul id="navigationBar">
+        <li class="navItems"><a class="navLink" href="index.html">Home</a></li>
+        <li class="navItems"><a class="navLink active" href="projects.html">Projects</a></li>
+    </ul>
+    
     <h1>Projects</h1>
 
     <h2>Audio Narrative</h2>
