added reflection to index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
     <h1>Katelynn's Portfolio</h1>
     <p>This website serves as Katelynn's portfolio. It includes both an audio narratice about desire and horror and a video essay
         about contentment and Fantastic Mr. Fox.</p>
-    
+    <p>While I would describe myself as an artist, I would never even dream of saying I'm skilled at any type of graphic design.
+        This often reads as contradictory to people unfamiliar with these skills. If they're both such visual and creative skills,
+        why don't they translate? There is some overlap, but many of the most essential aspects of graphic design involve
+        knowledge entirely outside the scope of "art." Accessibility and function are fundamental to good graphic design, and art
+        is uninterested in those aspects. For these reasons, I was immensely worried for how this website would go.</p>
+    <p>Years ago, I had to make a portfolio website for the class I was taking at the time. While the website itself is now long
+        gone, I vividly remember its many failings. It was incredibly hard on the eyes, with soft pink text on a bright yellow 
+        background. Colors that are cute and give you an aching headache after a few seconds of trying to read. I wanted to
+        ensure I wouldn't make the same mistakes this time around. To do so, I decided on a light pink and used 
+        <a href="https://coolors.co/edced6-e63946-f8f4a6-265876-2a2e45">Coolors</a> to create a balanced color palette around it.
+        Then I focused on making sure all my text was readable using a color contrast checker.</p>
+    <p>While integral to design, colors aren't the only factor in making a website appealing and accessible. For my headers, 
+        I used "Georgia" to stand out and used "Arial" for smaller text like paragraphs and credits, as it is meant for that and 
+        uniquely helpful for dyslexic users. I decided to add a navigation bar, both to make the website easier to navigate and to 
+        add an extra splash of polish. I also changed around some formatting, most notably switching my photos to the Projects 
+        page to better seperate each segment there.</p>
+    <p>Creating this portfolio website was certainly something I had no idea how to tackle, but looking deeper in how design 
+        works and using my previous website as a cautionary tale helped immensely. It also served as a last hurrah to the other 
+        projects I had made in this class by finding photos to represent both my audio narrative and video essay. 
+    </p>
     
 
     <img src="assets\nosferatu.jpeg" alt="Lily Rose-Depp as Ellen in Robert Egger's Nosferatu. 
