--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </ul>
     
     <h1>Katelynn's Portfolio</h1>
+    <div class="mainText">
     <p>This website serves as Katelynn's portfolio. It includes both an audio narratice about desire and horror and a video essay
         about contentment and Fantastic Mr. Fox.</p>
     <p>While I would describe myself as an artist, I would never even dream of saying I'm skilled at any type of graphic design.
@@ -34,6 +35,6 @@
         works and using my previous website as a cautionary tale helped immensely. It also served as a last hurrah to the other 
         projects I had made in this class by finding photos to represent both my audio narrative and video essay. 
     </p>
+    </div>
 
-    <h2><a href="projects.html">Projects</a></h2>
 </body>
