--- a/projects.html
+++ b/projects.html
@@ -29,12 +29,15 @@
         societal changes.</p>
 
     <h4>Credits</h4>
-    <ul>
-    <li><a href="https://www.youtube.com/watch?v=nulvWqYUM8k">Nosferatu by Robert Eggers</a></li>
-    <li><a href="https://www.youtube.com/watch?v=TUamUHcxMVY">The Phantom of the Opera by Rupert Julian</a></li>
-    <li><a href="https://www.youtube.com/watch?v=mvLpbHKV1_8">Scream by Wes Craven</a></li>
-    <li><a href="https://www.youtube.com/watch?v=gVJmqp6ufnk">Come to Me by Howard Shore</a></li>
-    </ul>
+    <div class="credits">
+        <ul class="creditsUL">
+            <li><a href="https://www.youtube.com/watch?v=nulvWqYUM8k">Nosferatu by Robert Eggers</a></li>
+            <li><a href="https://www.youtube.com/watch?v=TUamUHcxMVY">The Phantom of the Opera by Rupert Julian</a></li>
+            <li><a href="https://www.youtube.com/watch?v=mvLpbHKV1_8">Scream by Wes Craven</a></li>
+            <li><a href="https://www.youtube.com/watch?v=gVJmqp6ufnk">Come to Me by Howard Shore</a></li>
+        </ul>
+    </div>
+    
 
     <h2>Video Essay</h2>
 
@@ -69,22 +72,24 @@
         discuss feel more important.</p>
 
     <h4>Credits</h4>
-    <ul>
-    <li><a href="https://www.youtube.com/watch?v=B-J95eYpYZM">Fantastic Mr. Fox, Wes Anderson - licensed under fair use</a></li>
-    <li><a href="https://www.youtube.com/watch?v=15SS1lL9ogY">FANTASTIC MR. FOX Featurette - George Clooney as Mr. Fox, 
-                                                    SearchlightPictures - licensed under fair use</a></li>
-    <li><a href="https://collider.com/wes-anderson-interview-fantastic-mr-fox/">Wes Anderson Interview FANTASTIC MR. FOX, 
-                                                    Steven Weintraub, Collider</a></li>
-    <li><a href="https://www.npr.org/transcripts/120682083">Wes Anderson Covers New Ground With 'Mr. Fox', Terry Gross, NPR</a></li>
-    <li><a href="https://www.youtube.com/watch?v=unpIyUXuH8A">Roald Dahl | Fantastic Mr Fox - Full Live Read Audiobook, 
-                                                    Book Club</a></li>
-    <li><a href="https://archive.org/details/roald-dah-l-fantastic-mr.-fox-pdf/page/n5/mode/2up">Fantastic Mr. Fox, Roald Dahl - 
-                                                    licensed under fair use</a></li>
-    <li><a href="https://jp.pinterest.com/pin/294282156884660156/">Quentin Blake Illustration</a></li>
-    <li><a href="https://www.manchestereveningnews.co.uk/whats-on/whats-on-news/original-puppets-netflix-hollywood-movies-25615585">
-        Original puppets from Netflix and Hollywood movies on display in Trafford</a></li>
-    <li><a href="https://www.youtube.com/watch?v=ojCLrvhjhK0">Free stock footage - Boat on the ocean, Top Copyright-Free</a></li>
-    <li>Personal photos and video, Alexander Vega</li>
-    </ul>
-    <h2><a href="index.html">Main Page</a></h2>
+    <div class="credits">
+        <ul class="creditsUL">
+            <li><a href="https://www.youtube.com/watch?v=B-J95eYpYZM">Fantastic Mr. Fox, Wes Anderson - licensed under fair use</a></li>
+            <li><a href="https://www.youtube.com/watch?v=15SS1lL9ogY">FANTASTIC MR. FOX Featurette - George Clooney as Mr. Fox, 
+                                                        SearchlightPictures - licensed under fair use</a></li>
+            <li><a href="https://collider.com/wes-anderson-interview-fantastic-mr-fox/">Wes Anderson Interview FANTASTIC MR. FOX, 
+                                                        Steven Weintraub, Collider</a></li>
+            <li><a href="https://www.npr.org/transcripts/120682083">Wes Anderson Covers New Ground With 'Mr. Fox', Terry Gross, NPR</a></li>
+            <li><a href="https://www.youtube.com/watch?v=unpIyUXuH8A">Roald Dahl | Fantastic Mr Fox - Full Live Read Audiobook, 
+                                                        Book Club</a></li>
+            <li><a href="https://archive.org/details/roald-dah-l-fantastic-mr.-fox-pdf/page/n5/mode/2up">Fantastic Mr. Fox, Roald Dahl - 
+                                                        licensed under fair use</a></li>
+            <li><a href="https://jp.pinterest.com/pin/294282156884660156/">Quentin Blake Illustration</a></li>
+            <li><a href="https://www.manchestereveningnews.co.uk/whats-on/whats-on-news/original-puppets-netflix-hollywood-movies-25615585">
+            Original puppets from Netflix and Hollywood movies on display in Trafford</a></li>
+            <li><a href="https://www.youtube.com/watch?v=ojCLrvhjhK0">Free stock footage - Boat on the ocean, Top Copyright-Free</a></li>
+            <li>Personal photos and video, Alexander Vega</li>
+        </ul>
+    </div>
+    
 </body>
